--- a/Restuarant_API/Restaurant_MVC/Views/Customers/Index.cshtml
+++ b/Restuarant_API/Restaurant_MVC/Views/Customers/Index.cshtml
@@ -51,7 +51,8 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CustomerId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.CustomerId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CustomerId">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.CustomerId">Delete</a> |
+                <a asp-controller="Tables" asp-action="Index" asp-route-id="">Show Tables</a>
             </td>
         </tr>
 }
